// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`numericSelector() calls twice ReactDOM.render(<Selector props />, container) 1`] = `
<div
  className="ais-NumericSelector custom-root cx"
>
  <Selector
    cssClasses={
      Object {
        "option": "ais-NumericSelector-option custom-option",
        "root": "ais-NumericSelector custom-root cx",
        "select": "ais-NumericSelector-select custom-select",
      }
    }
    currentValue={1}
    options={
      Array [
        Object {
          "label": "first",
          "value": 1,
        },
        Object {
          "label": "second",
          "value": 2,
        },
      ]
    }
    setValue={[Function]}
  />
</div>
`;

exports[`numericSelector() calls twice ReactDOM.render(<Selector props />, container) 2`] = `
<div
  className="ais-NumericSelector custom-root cx"
>
  <Selector
    cssClasses={
      Object {
        "option": "ais-NumericSelector-option custom-option",
        "root": "ais-NumericSelector custom-root cx",
        "select": "ais-NumericSelector-select custom-select",
      }
    }
    currentValue={1}
    options={
      Array [
        Object {
          "label": "first",
          "value": 1,
        },
        Object {
          "label": "second",
          "value": 2,
        },
      ]
    }
    setValue={[Function]}
  />
</div>
`;

exports[`numericSelector() computes refined values and pass them to <Selector props /> 1`] = `
<div
  className="ais-NumericSelector custom-root cx"
>
  <Selector
    cssClasses={
      Object {
        "option": "ais-NumericSelector-option custom-option",
        "root": "ais-NumericSelector custom-root cx",
        "select": "ais-NumericSelector-select custom-select",
      }
    }
    currentValue={20}
    options={
      Array [
        Object {
          "label": "first",
          "value": 1,
        },
        Object {
          "label": "second",
          "value": 2,
        },
      ]
    }
    setValue={[Function]}
  />
</div>
`;
